cmake_minimum_required(VERSION 3.10.2)

project(leetcode-solutions)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsigned-char")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-common")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-strict-aliasing")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fstack-protector-all")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wformat=2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-label")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-value")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-variable")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-function")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} '-Wl,-z,noexecstack'")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} '-Wl,-z,relro'")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} '-Wl,-z,now'")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} '-Wl,--no-undefined'")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} '-pie'")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} '-fsanitize=address'")

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})

file(GLOB SOURCES *.cpp)
foreach(SOURCE ${SOURCES})
    get_filename_component(executable ${SOURCE} NAME_WE)
    add_executable(${executable} ${SOURCE})
    target_link_libraries(${executable} ${GTEST_BOTH_LIBRARIES})
endforeach()